# risk-dpo-fsdp-v1

./: .gitignore  base_out.jsonl  compute_batch_log_prob.py  config.yaml  config_vllm.yaml  dpo_loss.py  generate_pairwise.py  generate_response.py  generate_response_vllm.py  gpt_judge_pairwise.py  process_hh_dataset.py  pyproject.toml  requirements.txt  summarize_judged.py  threshold.py  training.py  upload_hf.py
eval_outputs/: judged.jsonl  judged_output.jsonl  pairwise.jsonl
test/8B 16bs/: global_margins_log.jsonl  global_tail_test_and_beta_log.jsonl
test/8B_4bs/: global_margins_log.jsonl  global_tail_test_and_beta_log.jsonl
