[project]
name = "fsdp_v1"
version = "0.1.0"
description = "FSDP DPO training experiment"
requires-python = ">=3.9"
dependencies = [
  "transformers",
  "datasets",
  "tokenizers",
  "accelerate",
  "peft",
  "trl",
  "tqdm",
  "matplotlib",
  "scipy",
  "wandb",
  "numpy",
  "vllm",
  "openai",
]

